[gd_scene load_steps=2 format=3 uid="uid://c61e81ehl37pn"]

[ext_resource type="Script" uid="uid://bn34n44jpvd4l" path="res://scripts/Lobby.gd" id="1_l6cm7"]

[node name="main_menu" type="Node"]

[node name="interface" type="CanvasLayer" parent="."]

[node name="lobby" type="Control" parent="interface" node_paths=PackedStringArray("player_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")
player_list = NodePath("players")

[node name="buttons" type="VBoxContainer" parent="interface/lobby"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -101.0
grow_horizontal = 0
grow_vertical = 0

[node name="host" type="Button" parent="interface/lobby/buttons"]
layout_mode = 2
text = "Host"

[node name="join" type="Button" parent="interface/lobby/buttons"]
layout_mode = 2
text = "Join"

[node name="disconnect" type="Button" parent="interface/lobby/buttons"]
layout_mode = 2
text = "Disconnect"

[node name="debug" type="Button" parent="interface/lobby/buttons"]
layout_mode = 2
text = "Debug"

[node name="players" type="VBoxContainer" parent="interface/lobby"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="interface/lobby/buttons/host" to="interface/lobby" method="_on_host_pressed"]
[connection signal="pressed" from="interface/lobby/buttons/join" to="interface/lobby" method="_on_join_pressed"]
[connection signal="pressed" from="interface/lobby/buttons/disconnect" to="interface/lobby" method="_on_disconnect_pressed"]
[connection signal="pressed" from="interface/lobby/buttons/debug" to="interface/lobby" method="_on_debug_pressed"]
